cargo-features = ["edition2021"]
[package]
name = "klex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
image = "0.23.14"
petgraph = "0.6.0"
crossbeam-channel = "0.5.1"
iced = { version = "0.3.0", features = ["canvas"] }
iced_native = "0.4.0"
iced_wgpu = "0.4.0"
